Use JVM option 'add-exports' to circumvent JigSaw barriers